--- a/login_signup.html
+++ b/login_signup.html
@@ -59,7 +59,7 @@
         </div>
 
         <!-- Login Form -->
-        <form id="login-form" class="active"  method="post">
+        <form id="login-form" class="active"  action="student_dashboard.html" method="post">
           <label for="login-role">Select Role</label>
           <select id="login-role" name="login-role" required>
             <option value="">Select Role</option>
@@ -80,7 +80,7 @@
         </form>
 
         <!-- Signup Form -->
-        <form id="signup-form"  method="post">
+        <form id="signup-form" action="student_dashboard.html"  method="post">
           <label for="signup-role">Select Role</label>
           <select id="signup-role" name="signup-role" required>
             <option value="student">Student</option>
